# udacity-mnist-classification

./: .gitignore  MNIST_Handwritten_Digits-STARTER.ipynb  MNIST_Handwritten_Digits-final.html  README.md  pyproject.toml  requirements.txt
configs/: baseline_mlp.yaml  cnn_basic.yaml  cnn_deep_affine_cosine.yaml  resnet_small.yaml  sweep_overnight.yaml  top1_resnet_small_heavy.yaml  top2_resnet_small_light.yaml  top3_deeper_cnn_light.yaml
mnist/: __init__.py  analysis.py  augmentation.py  cli.py  config.py  data.py  evaluate.py  models.py  optim.py  save.py  train.py
results/: deeper_cnn_affine_adamw_cosine_do0p2.json  deeper_cnn_affine_adamw_cosine_do0p3-wd0p0005-ls0p1.json  deeper_cnn_affine_erasing_adamw_cosine_do0p2.json  deeper_cnn_affine_erasing_adamw_cosine_do0p3-wd0p0005-ls0p1.json  deeper_cnn_affine_erasing_sgd_onecycle_do0p2.json  deeper_cnn_affine_erasing_sgd_onecycle_do0p3-wd0p0005-ls0p1.json  deeper_cnn_affine_sgd_onecycle_do0p2.json  deeper_cnn_affine_sgd_onecycle_do0p3-wd0p0005-ls0p1.json  deeper_cnn_none_adamw_cosine_do0p2.json  deeper_cnn_none_adamw_cosine_do0p3-wd0p0005-ls0p1.json  deeper_cnn_none_sgd_onecycle_do0p2.json  deeper_cnn_none_sgd_onecycle_do0p3-wd0p0005-ls0p1.json  mlp_affine_adamw_cosine_do0p2.json  mlp_affine_adamw_cosine_do0p3-wd0p0005-ls0p1.json  mlp_affine_erasing_adamw_cosine_do0p2.json  mlp_affine_erasing_adamw_cosine_do0p3-wd0p0005-ls0p1.json  mlp_affine_erasing_sgd_onecycle_do0p2.json  mlp_affine_erasing_sgd_onecycle_do0p3-wd0p0005-ls0p1.json  mlp_affine_sgd_onecycle_do0p2.json  mlp_affine_sgd_onecycle_do0p3-wd0p0005-ls0p1.json  (+29 more)
